<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/logoVerticalMargin"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/top_round_background"
        android:backgroundTint="?attr/colorSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spacer"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:text="@string/welcome_text"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toTopOf="@id/emailTextView"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view" />

    <TextView
        android:id="@+id/emailTextView"
        style="@style/textViewHint"
        android:text="@string/email_text"
        app:layout_constraintBottom_toTopOf="@id/emailTextEdit"
        app:layout_constraintStart_toStartOf="@id/emailTextEdit" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailTextEdit"
        style="@style/textEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/loginTextView"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <TextView
        android:id="@+id/loginTextView"
        style="@style/textViewHint"
        android:text="@string/login_text"
        app:layout_constraintBottom_toTopOf="@id/loginTextEdit"
        app:layout_constraintStart_toStartOf="@id/loginTextEdit" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginTextEdit"
        style="@style/textEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        app:layout_constraintBottom_toTopOf="@+id/nameTextView"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <TextView
        android:id="@+id/nameTextView"
        style="@style/textViewHint"
        android:text="@string/name_text"
        app:layout_constraintBottom_toTopOf="@id/nameTextEdit"
        app:layout_constraintStart_toStartOf="@id/nameTextEdit" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameTextEdit"
        style="@style/textEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/birthDateTextView"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <TextView
        android:id="@+id/birthDateTextView"
        style="@style/textViewHint"
        android:text="@string/birth_date_text"
        app:layout_constraintBottom_toTopOf="@id/birthDateTextEdit"
        app:layout_constraintStart_toStartOf="@id/birthDateTextEdit" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/birthDateTextEdit"
        style="@style/textEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/regionTextView"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <TextView
        android:id="@+id/regionTextView"
        style="@style/textViewHint"
        android:text="@string/region_text"
        app:layout_constraintBottom_toTopOf="@id/regionTextViewAlert"
        app:layout_constraintStart_toStartOf="@id/regionTextViewAlert" />

    <TextView
        android:id="@+id/regionTextViewAlert"
        style="@style/textEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextView"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <!--<Spinner
        android:id="@+id/regionSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextView"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        android:background="@drawable/background_spinner"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:minHeight="40dp"
        />-->

    <TextView
        android:id="@+id/passwordTextView"
        style="@style/textViewHint"
        android:text="@string/password_text"
        app:layout_constraintBottom_toTopOf="@id/passwordTextEdit"
        app:layout_constraintStart_toStartOf="@id/passwordTextEdit" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordTextEdit"
        style="@style/textEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/registrationButton"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <Button
        android:id="@+id/registrationButton"
        style="@style/button_simple"
        android:text="@string/button_text_sign_up"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view"
        app:layout_constraintVertical_bias="0.97" />

    <com.example.presentation.ResultView
        android:id="@+id/resultView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>